# Barnes-Hut

./: .gitignore  README.md  barnes-hutt  barnes-hutt.cpp  barnes-hutt.hpp  graphics.hpp  main.cpp  main_ng.cpp
src/: CMakeLists.txt  barnes-hut.cpp  barnes-hut.hpp  graphics.hpp  gravity.cpp  gravity.hpp  initial_distr.cpp  initial_distr.hpp  main.cpp  main_ng.cpp  nbody-sim.cpp  nbody-sim.hpp
